--- a/src/LarpManager/Views/user/register-confirmation-sent.twig
+++ b/src/LarpManager/Views/user/register-confirmation-sent.twig
@@ -1,13 +1,13 @@
-{% extends layout_template  %}
+{% extends "layout.twig"  %}
 
-{% block title %}Email confirmation sent{% endblock %}
+{% block title %}Email confirmation envoyé{% endblock %}
 
 {% block content %}
 
-    <h1>Thank you!</h1>
+    <h1>Merci !</h1>
 
-    <p>An email has been sent to you at <strong>{{ email }}</strong>.</p>
+    <p>Un email a été envoyé à <strong>{{ email }}</strong>.</p>
 
-    <p>Please click the link in that message to activate your account.</p>
+    <p>Merci de cliquer sur le lien présent dans le message pour activer votre compte.</p>
 
 {% endblock %}
