--- a/src/LarpManager/Views/user/register.twig
+++ b/src/LarpManager/Views/user/register.twig
@@ -1,4 +1,4 @@
-{% extends layout_template  %}
+{% extends "layout.twig"  %}
 
 {% block title %}Register{% endblock %}
 
@@ -9,12 +9,14 @@
         <p><a href="{{ path('user.logout') }}">Sign out</a></p>
 
     {% else %}
-        <h1>
-            Create an account
-        </h1>
+    	<div class="page-header">
+	        <h1>
+	            Créer un compte
+	        </h1>
+	    </div>
 
         <p class="text-muted lead">
-            Already have an account? <a href="{{ path('user.login') }}">Sign in now.</a>
+            Vous disposez déjà d'un compte ? <a href="{{ path('user.login') }}">Connectez-vous.</a>
         </p>
 
         {% if error %}
@@ -24,10 +26,10 @@
         <form class="form-horizontal" method="POST">
 
             <div class="form-group">
-                <label class="col-sm-2 control-label" for="input-name">Name</label>
+                <label class="col-sm-2 control-label" for="input-name">Nom</label>
                 <div class="col-sm-8">
-                    <input class="form-control" name="name" type="text" id="input-name" placeholder="Name" value="{{ name }}">
-                    <span class="help-inline">Shown publicly</span>
+                    <input class="form-control" name="name" type="text" id="input-name" placeholder="Nom" value="{{ name }}">
+                    <span class="help-inline">Information publique</span>
                 </div>
             </div>
 
@@ -35,36 +37,36 @@
                 <label class="col-sm-2 control-label" for="input-email">Email</label>
                 <div class="col-sm-8">
                     <input class="form-control" name="email" type="email" id="input-email" placeholder="Email" required value="{{ email }}">
-                    <span class="help-inline">Never shared</span>
+                    <span class="help-inline">Information privée, ne sera jamais rendue publique ou partagée avec d'autres sites.</span>
                 </div>
             </div>
 
             {% if isUsernameRequired %}
                 <div class="form-group">
-                    <label class="col-sm-2 control-label" for="input-username">Username</label>
+                    <label class="col-sm-2 control-label" for="input-username">Nom d'utilisateur</label>
                     <div class="col-sm-8">
-                        <input class="form-control" name="username" type="text" id="input-username" placeholder="Username" required value="{{ username }}">
+                        <input class="form-control" name="username" type="text" id="input-username" placeholder="Nom d'utilisateur" required value="{{ username }}">
                     </div>
                 </div>
             {% endif %}
 
             <div class="form-group">
-                <label class="col-sm-2 control-label" for="input-password">Password</label>
+                <label class="col-sm-2 control-label" for="input-password">Mot de passe</label>
                 <div class="col-sm-8">
-                    <input class="form-control" name="password" type="password" id="input-password" required placeholder="Password">
+                    <input class="form-control" name="password" type="password" id="input-password" required placeholder="Mot de passe">
                 </div>
             </div>
 
             <div class="form-group">
-                <label class="col-sm-2 control-label" for="input-confirm-password">Re-type password</label>
+                <label class="col-sm-2 control-label" for="input-confirm-password">Confirmez votre mot de passe</label>
                 <div class="col-sm-8">
-                    <input class="form-control" name="confirm_password" type="password" id="input-confirm-password" required placeholder="Confirm password">
+                    <input class="form-control" name="confirm_password" type="password" id="input-confirm-password" required placeholder="Confirmez votre mot de passe">
                 </div>
             </div>
 
             <div class="form-group">
                 <div class="col-sm-8 col-sm-offset-2">
-                    <button type="submit" class="btn btn-primary">Register</button>
+                    <button type="submit" class="btn btn-primary">S'enregistrer</button>
                 </div>
             </div>
         </form>
