Modification de la procédure d'installation (utilisation de doctrine). Regroupppement des vues erreurs dans un répertoire à eux. Modification layout pour erreur et pour install

--- a/src/LarpManager/Views/error/layout.twig
+++ b/src/LarpManager/Views/error/layout.twig
@@ -30,7 +30,7 @@
 	        <span class="icon-bar"></span>
 	        <span class="icon-bar"></span>
 	      </button>
-	      <a class="navbar-brand" href="{{ path('install_index') }}">Installation</a>
+	      <a class="navbar-brand" href="{{ path('homepage') }}">LarpManager</a>
 	    </div>
 	    </div>
 	   </nav>
