--- a/src/LarpManager/Views/install/installfirstuser.twig
+++ b/src/LarpManager/Views/install/installfirstuser.twig
@@ -6,22 +6,15 @@
 	<p>Installation de LarpManager, deuxième étape</p>
 	<p>L'installation de la table user s'est déroulée avec succès</p>
 	<p>Veuillez créer le premier utilisateur, comme ceci est le premier user, il aura les droits d'administration.</p>
-	<p>Ensuite, retournez sur la page d'install pour vous connecter et continuer l'installation.</p>
 	
-   
-    <form class="form-horizontal" method="POST"  action="{{ path('install_register') }}">
-        <label for="name">Nom</label>
-        <input name="name" type="text" required/>
-
-        <label for="email">Email</label>
-        <input name="email" type="email" required/>
-
-        <label for="password">Password</label>
-        <input name="password" type="password" required/>
-
-        <button type="submit">Register</button>
-    </form>
-
-    
+	<fieldset>
+	<legend>Création de l'utilisateur admin</legend>
+	<form class="form-horizontal" action="{{ path('install_create_user') }}" method="POST" {{ form_enctype(form) }}>
+	
+		{% form_theme form 'Form/fields.twig' %}
+		{{ form(form) }}
+		
+	</form>
+	</fieldset>   
 	
 {% endblock %}
