--- a/src/LarpManager/Views/install/index.twig
+++ b/src/LarpManager/Views/install/index.twig
@@ -4,14 +4,15 @@
 
 {% block content %}
 	<p>Installation de LarpManager</p>
-		<form action="{{ path('create_or_update_larp') }}" method ="POST">
-		<p>Il existe un fichier d'installation ou mise à jour des tables nécessaires au fonctionnement de LarpManager</p>
-		<p>Veuillez vérifier le contenu : </p>
-		<div id="sqlcontent">
-		{{ sql_content|raw }}
-		</div>
-		<input type="submit" value="Installer" />
-		</form>
+	
+	<fieldset>
+	<legend>Installation de la base de données</legend>
+	<form class="form-vertical" action="{{ path('install_index') }}" method="POST" {{ form_enctype(form) }}>
+	
+		{% form_theme form 'Form/fields.twig' %}
+		{{ form(form) }}
 		
+	</form>
+	</fieldset>
 	
 {% endblock %}
