--- a/src/LarpManager/Views/user/forgot-password.twig
+++ b/src/LarpManager/Views/user/forgot-password.twig
@@ -1,13 +1,15 @@
-{% extends layout_template  %}
+{% extends "layout.twig"  %}
 
-{% block title %}Forgot your password?{% endblock %}
+{% block title %}Mot de passe oublié ?{% endblock %}
 
 {% block content %}
 
-    <h1>Forgot your password?</h1>
+	<div class="page-header">
+    	<h1>Mot de passe oublié ?</h1>
+    </div>
 
     <p class="text-muted lead">
-        Enter your email address below and we'll send you password reset instructions.
+        Entrez votre adresse mail, les instruction pour modifier votre mot de passe vous seront envoyés.
     </p>
 
     {% if error %}
@@ -16,15 +18,15 @@
 
     <form class="form-horizontal" method="POST" action="{{ path('user.forgot-password') }}">
         <div class="form-group">
-            <label class="col-sm-2 control-label" for="inputEmail">Your email address</label>
+            <label class="col-sm-2 control-label" for="inputEmail">Votre adresse email</label>
             <div class="col-sm-8">
                 <input class="form-control" name="email" type="text" id="inputEmail" required value="{{ email }}">
             </div>
         </div>
         <div class="form-group">
             <div class="col-sm-8 col-sm-offset-2">
-                <button type="submit" class="btn btn-primary">Send me reset instructions</button>
-                <a href="{{ path('user.login') }}" style="margin-left: 10px;">Back to login</a>
+                <button type="submit" class="btn btn-primary">Envoyer les instructions</button>
+                <a href="{{ path('user.login') }}" style="margin-left: 10px;">Retourner à la page de connection</a>
             </div>
         </div>
 
