--- a/src/LarpManager/Views/user/login-confirmation-needed.twig
+++ b/src/LarpManager/Views/user/login-confirmation-needed.twig
@@ -4,7 +4,9 @@
 
 {% block content %}
 
-    <h1>Votre compte n'est pas encore actif</h1>
+	<div class="page-header">
+    	<h1>Votre compte n'est pas encore actif</h1>
+    </div>
 
     <p>Un email a du vous être envoyé à l'adresse <strong>{{ email }}</strong> lorsque vous vous être enregistré.</p>
 
