--- a/src/LarpManager/Views/user/register-confirmation-sent.twig
+++ b/src/LarpManager/Views/user/register-confirmation-sent.twig
@@ -4,7 +4,9 @@
 
 {% block content %}
 
-    <h1>Merci !</h1>
+	<div class="page-header">
+    	<h1>Merci !</h1>
+    <div class="page-header">
 
     <p>Un email a été envoyé à <strong>{{ email }}</strong>.</p>
 
