--- a/src/LarpManager/Views/user/edit.twig
+++ b/src/LarpManager/Views/user/edit.twig
@@ -1,11 +1,13 @@
-{% extends layout_template  %}
+{% extends "layout.twig" %}
 
-{% block title %}Edit User: {{ user.displayName }}{% endblock %}
+{% block title %}Modifier l'utilisateur : {{ user.displayName }}{% endblock %}
 
 {% block content %}
 
-    <h1>Edit User: {{ user.displayName }}</h1>
-
+	<div class="page-header">
+    	<h1>Modifier l'utilisateur : {{ user.displayName }}</h1>
+	</div>
+	
     {% if error %}
         <div class="alert alert-danger">{{ error|nl2br }}</div>
     {% endif %}
@@ -14,8 +16,8 @@
 
         <div class="form-group">
             <label class="col-sm-2 control-label" for="input-name">
-                Gravatar image<br>
-                <a href="http://gravatar.com">Change</a>
+                Image Gravatar<br>
+                <a href="http://gravatar.com">Changer</a>
             </label>
             <div class="col-sm-8 form-control-static">
                 <img src="{{ image_url }}"/>
@@ -26,7 +28,7 @@
             <label class="col-sm-2 control-label" for="input-name">Name</label>
             <div class="col-sm-8">
                 <input class="form-control" name="name" type="text" id="input-name" placeholder="Name" value="{{ user.name }}">
-                <p class="help-block">Shown publicly</p>
+                <p class="help-block">Public</p>
             </div>
         </div>
 
@@ -34,7 +36,7 @@
             <label class="col-sm-2 control-label" for="input-email">Email</label>
             <div class="col-sm-8">
                 <input class="form-control" name="email" type="email" id="input-email" placeholder="Email" required value="{{ user.email }}">
-                <p class="help-block">Never shared</p>
+                <p class="help-block">Jamais partagé</p>
             </div>
         </div>
 
@@ -50,19 +52,19 @@
         <div class="form-group">
             <label class="col-sm-2 control-label" for="input-password">New password</label>
             <div class="col-sm-8">
-                <input class="form-control" name="password" type="password" id="input-password" placeholder="New password">
-                <p class="help-block">Leave blank except to change</p>
+                <input class="form-control" name="password" type="password" id="input-password" placeholder="Nouveau mot de passe">
+                <p class="help-block">Laissez vide à moins de vouloir le modifier</p>
             </div>
         </div>
 
         <div class="form-group">
-            <label class="col-sm-2 control-label" for="input-confirm-password">Confirm password</label>
+            <label class="col-sm-2 control-label" for="input-confirm-password">Confirmer le mot de passe</label>
             <div class="col-sm-8">
-                <input class="form-control" name="confirm_password" type="password" id="input-confirm-password" placeholder="Confirm password">
+                <input class="form-control" name="confirm_password" type="password" id="input-confirm-password" placeholder="Confirmez le mot de passe">
             </div>
         </div>
 
-        {% if is_granted('ROLE_ADMIN') %}
+		{% if is_granted('ROLE_ADMIN', app.user) %}
             <div class="form-group">
                 <label class="col-sm-2 control-label" for="input-roles">
                     Roles<br/>
@@ -91,8 +93,8 @@
 
         <div class="form-group">
             <div class="col-sm-8 col-sm-offset-2">
-                <button type="submit" class="btn btn-primary">Save</button>
-                <a style="margin-left: 10px;" href="{{ path('user.view', {'id': user.id}) }}">Back to profile</a>
+                <button type="submit" class="btn btn-primary">Savegarder</button>
+                <a style="margin-left: 10px;" href="{{ path('user.view', {'id': user.id}) }}">Retourner au profil</a>
             </div>
         </div>
 
