--- a/src/LarpManager/Views/user/reset-password.twig
+++ b/src/LarpManager/Views/user/reset-password.twig
@@ -1,27 +1,28 @@
 {% extends layout_template  %}
 
-{% block title %}Reset your password{% endblock %}
+{% block title %}Modifier le mot de passe{% endblock %}
 
 {% block content %}
 
-    <h1>
-        Choose a new password, {{ user.displayName }}
-    </h1>
-
+	<div class="page-header">
+    	<h1>
+        	Choisissez un nouveau mot de passe, {{ user.displayName }}
+    	</h1>
+	</div>
     {% if error %}
         <div class="alert alert-danger">{{ error|nl2br }}</div>
     {% endif %}
 
     <form class="form-horizontal" method="POST">
         <div class="form-group">
-            <label class="col-sm-2 control-label" for="input-password">New password</label>
+            <label class="col-sm-2 control-label" for="input-password">Nouveau mot de passe</label>
             <div class="col-sm-8">
                 <input class="form-control" name="password" type="password" id="input-password" required placeholder="Password">
             </div>
         </div>
 
         <div class="form-group">
-            <label class="col-sm-2 control-label" for="input-confirm-password">Re-type password</label>
+            <label class="col-sm-2 control-label" for="input-confirm-password">Saisissez de nouveau le mot de passe</label>
             <div class="col-sm-8">
                 <input class="form-control" name="confirm_password" type="password" id="input-confirm-password" required placeholder="Re-type password">
             </div>
@@ -29,7 +30,7 @@
 
         <div class="form-group">
             <div class="col-sm-8 col-sm-offset-2">
-                <button type="submit" class="btn btn-primary">Save password</button>
+                <button type="submit" class="btn btn-primary">Sauvegarder le mot de passe</button>
             </div>
         </div>
     </form>
