--- a/src/LarpManager/Views/Form/fields.twig
+++ b/src/LarpManager/Views/Form/fields.twig
@@ -41,7 +41,7 @@
             {% set label = name|humanize %}
         {%- endif -%}
     {%- endif -%}
-    <button class="form-control" type="{{ type|default('button') }}" {{ block('button_attributes') }}>{{ label|trans({}, translation_domain) }}</button>
+    <button class="btn btn-default" type="{{ type|default('button') }}" {{ block('button_attributes') }}>{{ label|trans({}, translation_domain) }}</button>
 {%- endblock button_widget -%}
 
 {%- block form_label -%}
@@ -62,7 +62,7 @@
                 {% set label = name|humanize %}
             {%- endif -%}
         {%- endif -%}
-        <label  class="col-sm-2 control-label" {% for attrname, attrvalue in label_attr %} {{ attrname }}="{{ attrvalue }}"{% endfor %}>{{ label|trans({}, translation_domain) }}</label>
+        <label {% for attrname, attrvalue in label_attr %} {{ attrname }}="{{ attrvalue }}"{% endfor %}>{{ label|trans({}, translation_domain) }}</label>
     {%- endif -%}
 {%- endblock form_label -%}
 
@@ -72,15 +72,11 @@
     <div class="form_group">
         {{ form_label(form) }}
         {{ form_errors(form) }}
-        <div class="col-sm-10">
-        	{{ form_widget(form) }}
-        </div>
+       	{{ form_widget(form) }}
     </div>
 {% endspaceless %}
 {% endblock form_row %}
 
 {%- block button_row -%}
-    <div class="form-group">
-        {{- form_widget(form) -}}
-    </div>
+    {{- form_widget(form) -}}
 {%- endblock button_row -%}
