--- a/src/LarpManager/Views/stock/tag/add.twig
+++ b/src/LarpManager/Views/stock/tag/add.twig
@@ -1,7 +1,20 @@
-<form action="{{ path('stock_tag_add') }}" method="POST" class="pure-form">
-	<fieldset>
-		<legend>Ajout d'un tag</legend>
-		{% form_theme form 'Form/fields.twig' %}
-		{{ form(form) }}
-	</fieldset>
-</form>
+{% extends "layout.twig" %}
+
+{% block content %}
+
+	<ol class="breadcrumb">
+	  <li><a href="{{ path('stock_homepage')}}">Stock</a></li>
+	  <li><a href="{{ path('stock_etat_index') }}">Tag</a></li>
+	  <li class="active"><a href="#">Ajout</a></li>
+	</ol>
+
+	<div class="page-header">
+		<h1>Ajout d'un tag</h1>
+	</div>
+
+	<form action="{{ path('stock_tag_add') }}" method="POST">
+			{% form_theme form 'Form/fields.twig' %}
+			{{ form(form) }}
+	</form>
+
+{% endblock %}
