--- a/src/LarpManager/Views/stock/tag/update.twig
+++ b/src/LarpManager/Views/stock/tag/update.twig
@@ -1,7 +1,20 @@
-<form action="{{ path('stock_tag_update', {index:tag.id} ) }}" method="POST" class="pure-form">
-	<fieldset>
-	<legend>Modification d'un tag</legend>
+{% extends "layout.twig" %}
+
+{% block content %}
+
+	<ol class="breadcrumb">
+	  <li><a href="{{ path('stock_homepage')}}">Stock</a></li>
+	  <li><a href="{{ path('stock_tag_index') }}">Tags</a></li>
+	  <li class="active"><a href="#">Modification</a></li>
+	</ol>
+
+	<div class="page-header">
+		<h1>Modification d'un tag</h1>
+	</div>
+	
+	<form action="{{ path('stock_tag_update', {index:tag.id} ) }}" method="POST">
 		{% form_theme form 'Form/fields.twig' %}
 		{{ form(form) }}
-	</fieldset>
-</form>
+	</form>
+	
+{%  endblock %}
