Travail sur les formulaires du stock. Présentation du stock. Ajout de la possibilité d'utiliser les fragments http.

--- a/src/LarpManager/Views/layout.twig
+++ b/src/LarpManager/Views/layout.twig
@@ -26,6 +26,11 @@
     	</div>
 	
         <div id="content" class="container-fluid">
+        
+        	{% for message in app.session.getFlashBag.get('success') %}
+    			<div class="alert alert-success" role="alert">{{ message }}</div>
+			{% endfor %}
+			
         	{% block content %}{% endblock content %}
         </div>
 			
