--- a/src/LarpManager/Views/Form/fields.twig
+++ b/src/LarpManager/Views/Form/fields.twig
@@ -62,7 +62,7 @@
                 {% set label = name|humanize %}
             {%- endif -%}
         {%- endif -%}
-        <label {% for attrname, attrvalue in label_attr %} {{ attrname }}="{{ attrvalue }}"{% endfor %}>{{ label|trans({}, translation_domain) }}</label>
+        <label class="col-sm-2 control-label" {% for attrname, attrvalue in label_attr %} {{ attrname }}="{{ attrvalue }}"{% endfor %}>{{ label|trans({}, translation_domain) }}</label>
     {%- endif -%}
 {%- endblock form_label -%}
 
@@ -72,11 +72,17 @@
     <div class="form_group">
         {{ form_label(form) }}
         {{ form_errors(form) }}
-       	{{ form_widget(form) }}
+        <div class="col-sm-10">
+       		{{ form_widget(form) }}
+       	</div>
     </div>
 {% endspaceless %}
 {% endblock form_row %}
 
 {%- block button_row -%}
-    {{- form_widget(form) -}}
+ 	<div class="form-group">
+		<div class="col-sm-offset-2 col-sm-10">
+	    	{{- form_widget(form) -}}
+	    </div>
+	 </div>
 {%- endblock button_row -%}
