--- a/src/LarpManager/Views/stock/etat/add.twig
+++ b/src/LarpManager/Views/stock/etat/add.twig
@@ -2,19 +2,16 @@
 
 {% block content %}
 
-	<ol class="breadcrumb">
-	  <li><a href="{{ path('stock_homepage')}}">Stock</a></li>
-	  <li><a href="{{ path('stock_etat_index') }}">Etats</a></li>
-	  <li class="active"><a href="#">Ajout</a></li>
-	</ol>
-
 	<div class="page-header">
 		<h1>Ajout d'un état</h1>
 	</div>
 
-	<form action="{{ path('stock_etat_add') }}" method="POST">
-			{% form_theme form 'Form/fields.twig' %}
-			{{ form(form) }}
-	</form>
+	<div class="container-fluid">
+		<div class="row">
+			<div class="col-xs-12 col-md-8">
+				{{ include("stock/etat/form.twig",{'action': path('stock_etat_add'), 'form' : form}) }}
+			</div>
+		</div>
+	</div>
 
 {% endblock %}
