--- a/src/LarpManager/Views/stock/etat/update.twig
+++ b/src/LarpManager/Views/stock/etat/update.twig
@@ -2,15 +2,16 @@
 
 {% block content %}
 
-	<ol class="breadcrumb">
-	  <li><a href="{{ path('stock_homepage')}}">Stock</a></li>
-	  <li><a href="{{ path('stock_etat_index') }}">Etats</a></li>
-	  <li class="active"><a href="#">Modification</a></li>
-	</ol>
-
-	<form action="{{ path('stock_etat_update', {index:etat.id} ) }}" method="POST">
-		{% form_theme form 'Form/fields.twig' %}
-		{{ form(form) }}
-	</form>
+	<div class="page-header">
+		<h1>Modification d'un état</h1>
+	</div>
+	
+	<div class="container-fluid">
+		<div class="row">
+			<div class="col-xs-12 col-md-8">
+				{{ include("stock/etat/form.twig",{'action': path('stock_etat_update', {index:etat.id} ), 'form' : form}) }}
+			</div>
+		</div>
+	</div>
 	
 {%  endblock %}
