--- a/src/LarpManager/Views/stock/index.twig
+++ b/src/LarpManager/Views/stock/index.twig
@@ -2,12 +2,6 @@
 
 {% block content %}
 
-<ol class="breadcrumb">
-  <li class="active"><a href="{{ path('stock_homepage')}}">Stock</a></li>
-  <li><a href="{{ path('stock_objet_index') }}">Objets</a></li>
-  <li><a href="{{ path('stock_objet_add') }}">Add</a></li>
-</ol>
-
 <div class="page-header">
 <h1>
 	Gestion du stock
@@ -18,44 +12,81 @@
 </div>
 
 
-{% if objet_without_proprio_count != 0 or objet_without_responsable_count != 0 or objet_without_localisation_count != 0 %}
 
-<div class="panel panel-warning">
-	<div class="panel-heading">
-		Des problèmes sont à régler !
+<div class="container-fluid">
+
+<div class="row">
+
+	<div class="col-xs-12 col-md-8">
+		{% if objet_without_proprio_count != 0 
+			or objet_without_responsable_count != 0 
+			or objet_without_localisation_count != 0 
+			or etats|length == 0
+			or tags|length == 0
+			or localisations|length == 0
+			or proprietaires|length == 0 %}
+			
+		<div class="panel panel-warning">
+			<div class="panel-heading">
+				<span class="glyphicon glyphicon-exclamation-sign" aria-hidden="true"></span>
+				Des problèmes sont à régler !
+			</div>
+		  	<div class="panel-body">
+				<ul>
+				{% if objet_without_proprio_count != 0 %}
+				<li>Attention, {{ objet_without_proprio_count }} objet(s) sans propriétaire.</li>
+				{%  endif %}
+				
+				{% if objet_without_responsable_count != 0 %}
+				<li>Attention, {{ objet_without_responsable_count }} objet(s) sans responsable.</li>
+				{%  endif %}
+				
+				{% if objet_without_localisation_count != 0 %}
+				<li>Attention, {{ objet_without_localisation_count }} objet(s) sans localisation.</li>
+				{%  endif %}
+				
+				{% if etats|length == 0 %}
+				<li>Aucun état n'est défini. Vous devriez en définir au moins un.</li>
+				{%  endif %}
+				
+				{% if tags|length == 0 %}
+				<li>Aucun tag n'est défini. Vous devriez en définir au moins un.</li>
+				{%  endif %}
+				
+				{% if localisations|length == 0 %}
+				<li>Aucune localisation n'est définie. Vous devriez en définir au moins un.</li>
+				{%  endif %}
+				
+				{% if proprietaires|length == 0 %}
+				<li>Aucun Propriétaires n'est défini. Vous devriez en définir au moins un.</li>
+				{%  endif %}
+				
+				</ul>
+			</div>
+		</div>
+		{% endif %}
+		
+		<div class="panel panel-default">
+			<div class="panel-heading">
+				Liste des 10 derniers objets ajoutés dans le stock.
+			</div>
+			
+			<div class="panel-body">
+				{{ include("stock/objet/list.twig", {'objets' : last_add}) }}
+			</div>
+		</div>
 	</div>
-  	<div class="panel-body">
-		<ul>
-		{% if objet_without_proprio_count != 0 %}
-		<li>Attention, {{ objet_without_proprio_count }} objet(s) sans propriétaire.</li>
-		{%  endif %}
-		
-		{% if objet_without_responsable_count != 0 %}
-		<li>Attention, {{ objet_without_responsable_count }} objet(s) sans responsable.</li>
-		{%  endif %}
-		
-		{% if objet_without_localisation_count != 0 %}
-		<li>Attention, {{ objet_without_localisation_count }} objet(s) sans localisation.</li>
-		{%  endif %}
-		</ul>
+
+
+	<div class="col-xs-12 col-md-4">
+		{{ include("stock/etat/list.twig", {'etats' : etats}) }}
+		{{ include("stock/tag/list.twig", {'tags' : tags}) }}
+		{{ include("stock/localisation/list.twig", {'localisations' : localisations}) }}
+		{{ include("stock/proprietaire/list.twig", {'proprietaires' : proprietaires}) }}
 	</div>
 </div>
-{% endif %}
 
-<div class="panel panel-default">
-	<div class="panel-heading">
-		Liste des derniers objets ajoutés dans le stock.
-	</div>
-	
-	<div class="panel-body">
-		<ul>
-		{% for objet in last_add %}
-			<li><a href="{{ path('stock_objet_detail',{index:objet.id}) }}">{{ objet.nom }}</a></li>
-		{% endfor %}
-		</ul>
-	</div>
+
 </div>
-
-
 
 {%  endblock %}
