--- a/src/LarpManager/Views/stock/localisation/add.twig
+++ b/src/LarpManager/Views/stock/localisation/add.twig
@@ -1,7 +1,17 @@
-<form action="{{ path('stock_localisation_add') }}" method="POST" class="pure-form">
-	<fieldset>
-		<legend>Ajout d'une localisation</legend>
-		{% form_theme form 'Form/fields.twig' %}
-		{{ form(form) }}
-	</fieldset>
-</form>
+{% extends "layout.twig" %}
+
+{% block content %}
+
+	<div class="page-header">
+		<h1>Ajout d'une localisation</h1>
+	</div>
+
+	<div class="container-fluid">
+		<div class="row">
+			<div class="col-xs-12 col-md-8">
+				{{ include("stock/localisation/form.twig",{'action': path('stock_localisation_add'), 'form' : form}) }}
+			</div>
+		</div>
+	</div>
+
+{% endblock %}
