--- a/src/LarpManager/Views/stock/objet/add.twig
+++ b/src/LarpManager/Views/stock/objet/add.twig
@@ -2,19 +2,16 @@
 
 {% block content %}
 
-<ol class="breadcrumb">
-  <li><a href="{{ path('stock_homepage')}}">Stock</a></li>
-  <li><a href="{{ path('stock_objet_index') }}">Objets</a></li>
-  <li class="active"><a href="#">Add</a></li>
-</ol>
+	<div class="page-header">
+		<h1>Ajout d'un objet</h1>
+	</div>
 
-<fieldset>
-<legend>Ajout d'un objet</legend>
-<form class="form-horizontal" action="{{ path('stock_objet_add') }}" method="POST" {{ form_enctype(form) }}>
-
-	{% form_theme form 'Form/fields.twig' %}
-	{{ form(form) }}
+	<div class="container-fluid">
+		<div class="row">
+			<div class="col-xs-12 col-md-8">
+				{{ include("stock/objet/form.twig",{'action': path('stock_objet_add'), 'form' : form}) }}
+			</div>
+		</div>
+	</div>
 	
-</form>
-</fieldset>
 {% endblock content %}
