--- a/src/LarpManager/Views/stock/objet/thumbnail.twig
+++ b/src/LarpManager/Views/stock/objet/thumbnail.twig
@@ -1,16 +1,14 @@
 <!-- Contenu d'un thunbnails -->
 
-<div class="col-sm-6 col-md-4">
+<div class="col-xs-6 col-md-2">
 	<div class="thumbnail">
-        {% if objet.objetPhoto %}
-        	<img src=" {{ app.request.basepath }}/upload/{{ objet.objetPhoto.realName }}" />
+        {% if objet.photo %}
+        	<img src="{{ app.request.basepath }}/uploads/img/{{ objet.photo.realName }}" alt="{{ objet.photo.name }}"/>
         {% endif %}
 		<div class="caption">
-	        <h3>{{ objet.nom }}</h3>
-	        <small>{{ objet.code }}</small>
+	        <h3>{{ objet.nom }}&nbsp;-&nbsp;<small>{{ objet.code }}</small></h3>
 	        <p>{{ objet.description }}</p>
-	        <p><a href="#" class="btn btn-primary" role="button">Modifier</a>
-	        <a href="#" class="btn btn-default" role="button">Supprimer</a></p>
+	        <p><a href="{{ path('stock_objet_update', {index: objet.id}) }}" class="btn btn-primary" role="button">Modifier</a></p>
     	</div>
 	</div>
 </div>
