--- a/src/LarpManager/Views/stock/objet/update.twig
+++ b/src/LarpManager/Views/stock/objet/update.twig
@@ -1,7 +1,17 @@
-<form action="{{ path('stock_objet_update', {index:objet.id} ) }}" method="POST" class="pure-form">
-	<fieldset>
-	<legend>Modification d'un objet</legend>
-		{% form_theme form 'Form/fields.twig' %}
-		{{ form(form) }}
-	</fieldset>
-</form>
+{% extends "layout.twig" %}
+
+{% block content %}
+
+	<div class="page-header">
+		<h1>Modification d'un objet</h1>
+	</div>
+
+	<div class="container-fluid">
+		<div class="row">
+			<div class="col-xs-12 col-md-8">
+				{{ include("stock/objet/form.twig",{'action': path('stock_objet_update',{'index':objet.id}), 'form' : form}) }}
+			</div>
+		</div>
+	</div>
+	
+{% endblock content %}
