--- a/src/LarpManager/Views/stock/tag/index.twig
+++ b/src/LarpManager/Views/stock/tag/index.twig
@@ -2,37 +2,28 @@
 
 {% block content %}
 
-	<ol class="breadcrumb">
-	  <li><a href="{{ path('stock_homepage')}}">Stock</a></li>
-	  <li class="active"><a href="#">Tags</a></li>
-	</ol>
-
-
 	<div class="page-header">
 		<h1>Liste des tags</h1>
 	</div>
 	
 	<div class="panel panel-info">
-		<div class="panel-heading">Qu'est-ce qu'un tag ?</div>
+		<div class="panel-heading">
+			<span class="glyphicon glyphicon-info-sign" aria-hidden="true"></span>
+			Qu'est-ce qu'un tag ?
+		</div>
 		<div class="panel-body">Les tags permettent de regrouper les objets afin d'avoir plus de faciliter à parcourir le stock d'objet. Voici quelques exemples de tags : Armes, décors, tentes, etc ...</div>
 	</div>
 	
 	{% if tags|length == 0 %}
 		<div class="panel panel-warning">
-			<div class="panel-heading">Attention !</div>
+			<div class="panel-heading">
+				<span class="glyphicon glyphicon-exclamation-sign" aria-hidden="true"></span>
+				Attention !
+			</div>
 			<div class="panel-body">Aucun tag n'est défini ! Vous devez définir au moins un tag.</div>
 		</div>
 	{% endif %}
-	<ul class="list-group">
-		<a href="{{ path('stock_tag_add') }}" class="list-group-item active">
-			<h4 class="list-group-item-heading">Ajouter un tag</h4>
-		</a>
-		{%  for tag in tags %}
-			<a href="{{ path('stock_tag_update', {index: tag.id}) }}" class="list-group-item">
-				<span class="badge">{{ tag.objets|length }}</span>
-				<h4 class="list-group-item-heading">{{ tag.nom }}</h4>
-			</a>
-		{%  endfor %}
-	</ul>
+
+	{{ include("stock/tag/list.twig", {'tags' : tags}) }}
 	
 {% endblock %}
