Ajout de la notion de rangement, les tags passent en liste déroulante. Ajout d'un code pour les objets généré à partir du numéro et de leur rangement, ajout de la photo lors de la mise à jour d'un objet.

--- a/src/LarpManager/Views/Form/bootstrap_3_layout.html.twig
+++ b/src/LarpManager/Views/Form/bootstrap_3_layout.html.twig
@@ -182,6 +182,11 @@
     <div class="form-group{% if (not compound or force_error|default(false)) and not valid %} has-error{% endif %}">
         {{- form_label(form) -}}
         {{- form_widget(form) -}}
+        {%  for attrname, attrvalue in attr %}
+        	{% if attrname =='help'  %}
+        		<span class="help-block">{{ attrvalue }}</span>
+        	{% endif %}
+        {%  endfor %}
         {{- form_errors(form) -}}
     </div>
 {%- endblock form_row %}
