--- a/src/LarpManager/Views/menu.twig
+++ b/src/LarpManager/Views/menu.twig
@@ -24,6 +24,7 @@
 						<li><a href="{{ path('stock_etat_index') }}">Etats</a></li>
 						<li><a href="{{ path('stock_tag_index') }}">Tags</a></li>
 						<li><a href="{{ path('stock_localisation_index') }}">Localisations</a></li>
+						<li><a href="{{ path('stock_rangement_index') }}">Rangements</a></li>
 						<li><a href="{{ path('stock_proprietaire_index') }}">Proprietaires</a></li>
 						<li><a href="{{ path('stock_objet_index') }}">Objets</a></li>
 					</ul>
