--- a/src/LarpManager/Views/stock/objet/list.twig
+++ b/src/LarpManager/Views/stock/objet/list.twig
@@ -6,10 +6,9 @@
 	{%  for objet in objets %}
 		<a href="{{ path('stock_objet_update', {index: objet.id}) }}" class="list-group-item">
 			<h4 class="list-group-item-heading">
-				{{ objet.code }}
-				{{ objet.nom }}
+				{{ objet.code }} 
 			</h4>
-			{{ objet.description }}
+			{{ objet.nom }} : {{ objet.description }}
 		</a>
 	{%  endfor %}
 </ul>
