--- a/src/LarpManager/Views/stock/objet/thumbnail.twig
+++ b/src/LarpManager/Views/stock/objet/thumbnail.twig
@@ -3,7 +3,7 @@
 <div class="col-xs-6 col-md-2">
 	<div class="thumbnail">
         {% if objet.photo %}
-        	<img src="{{ app.request.basepath }}/uploads/img/{{ objet.photo.realName }}" alt="{{ objet.photo.name }}"/>
+       		<img src="{{ app.request.basepath }}/uploads/img/{{ objet.photo.realName }}" alt="{{ objet.photo.name }}" height="50" width="50"/>
         {% endif %}
 		<div class="caption">
 	        <h3>{{ objet.nom }}&nbsp;-&nbsp;<small>{{ objet.code }}</small></h3>
