--- a/src/LarpManager/Views/stock/objet/detail.twig
+++ b/src/LarpManager/Views/stock/objet/detail.twig
@@ -2,75 +2,78 @@
 
 {% block content %}
 
-	<div id="ajax_entity">
-		
-		<table>
-		<caption>Détail de {{ objet.code }} - {{ objet.nom }}</caption>
-		<thead>
-			<tr>
-				<th colspan=2>
-					<a class="ajax_action" href="{{  path('stock_objet_add') }}"><i class="icon-plus-sign"></i></a>
-					<a class="ajax_action" href="{{ path('stock_objet_update', {index : objet.id} ) }}"><i class="icon-pencil"></i></a>
-				</th>
-			</tr>
-		</thead>
-		<tbody>
-		<tr>
-			<th>Nom</th>
-			<td>{{ objet.nom }}</td>
-		</tr>
-		<tr>
-			<th>Code</th>
-			<td>{{ objet.code }}</td></tr>
-		<tr>
-			<th>Date de création</th>
-			<td>{{ objet.creationDate|date('Y-m-d H:i:s') }}</td></tr>
-		<tr>
-			<th>Description</th>
-			<td>{{ objet.description }}</td></tr>
-		<tr>
-			<th>Photo</th>
-			<td>{{ objet.photo }}</td></tr>
-		<tr>
-			<th>Localisation</th>
-			<td>{% if objet.localisation %}{{ objet.localisation.label }}{%  endif %}</td></tr>
-		<tr>
-			<th>Etat</th>
-			<td>{% if objet.etat %}{{ objet.etat.label }}{%  endif %}</td></tr>
-		<tr>
-			<th>Taille</th>
-			<td>{{ objet.taille }}</td></tr>
-		<tr>
-			<th>Poid</th>
-			<td>{{ objet.poid }}</td></tr>
-		<tr>
-			<th>Couleur</th>
-			<td>{{ objet.couleur }}</td></tr>
-		<tr>
-			<th>Propriétaire</th>
-			<td>{% if objet.proprietaire %}{{ objet.proprietaire.nom }}{%  endif %}</td></tr>
-		<tr>
-			<th>Responsable</th>
-			<td>{% if objet.responsable %}{{ objet.responsable.username }}{%  endif %}</td></tr>
-		<tr>
-			<th>Cout</th>
-			<td>{{ objet.cout }}</td></tr>
-		<tr>
-			<th>Nombre</th>
-			<td>{{ objet.nombre }}</td></tr>
-		<tr>
-			<th>Budget</th>
-			<td>{{ objet.budget }}</td></tr>
-		<tr>
-			<th>Investissement</th>
-			<td>{{ objet.investissement }}</td>
-		</tr>
-		</tbody>
-		</table>
-		
-		
+	<div class="page-header">
+		<h1>Détail de {{ objet.code }} - {{ objet.nom }} <a href="{{ path('stock_objet_update', {index: objet.id}) }}" class="btn btn-primary" role="button">Modifier</a></h1>		
 	</div>
-	
-	<div id="ajax_result"></div>
+
+	<div class="container-fluid">
+		<div class="row">
+			<div class="col-xs-12 col-md-6">
+							
+				<div class="panel panel-default">
+					<div class="panel-heading">
+						Information générale
+					</div>
+					<div class="panel-body">
+						<ul>
+						<li><b>Nom :</b> {{ objet.nom }}</li>
+						<li><b>Code :</b> {{ objet.code }}</li>
+						<li><b>Description :</b> {{ objet.description }}</li>
+						<li><b>Date de création :</b> {{ objet.creationDate|date('Y-m-d H:i:s') }}</li>
+						</ul>
+						
+						{% if objet.photo %}
+        					<img src="{{ app.request.basepath }}/uploads/img/{{ objet.photo.realName }}" alt="{{ objet.photo.name }}" class="img-responsive" />
+        				{% endif %}
+					</div>
+				</div>
+				
+				<div class="panel panel-default">
+					<div class="panel-heading">
+						Localisation
+					</div>
+					<div class="panel-body">
+						<ul>
+							<li><b>Rangement :</b> {% if objet.rangement %}{{ objet.rangement.adresse }}{%  endif %}</li>
+							<li><b>Etat :</b> {% if objet.etat %}{{ objet.etat.label }}{%  endif %}</li>
+							<li><b>Proprietaire :</b> {% if objet.proprietaire %}{{ objet.proprietaire.nom }}{%  endif %}</li>
+							<li><b>Responsable :</b> {% if objet.responsable %}{{ objet.responsable.username }}{%  endif %}</li>
+						</ul>
+					</div>
+				</div>
+				
+			</div>
+			
+			
+			<div class="col-xs-12 col-md-6">
+				<div class="panel panel-default">
+					<div class="panel-heading">
+						Autres information
+					</div>
+					<div class="panel-body">
+						<ul>
+						<li><b>Cout :</b>{{ objet.cout }}</li>
+						<li><b>Nombre :</b>{{ objet.nombre }}</li>
+						<li><b>Budget :</b>{{ objet.budget }}</li>
+						<li><b>Investissement :</b>{{ objet.investissement }}</li>
+						</ul>
+					</div>
+				</div>
+			
+				<div class="panel panel-default">
+					<div class="panel-heading">
+						Caractèristiques
+					</div>
+					<div class="panel-body">
+						<ul>
+						<li><b>Taille :</b>{% if objet.objetCarac %}{{ objet.objetCarac.taille }}{%  endif %}</li>
+						<li><b>Poid :</b>{% if objet.objetCarac %}{{ objet.objetCarac.poid }}{%  endif %}</li>
+						<li><b>Couleur :</b>{% if objet.objetCarac %}{{ objet.objetCarac.couleur }}{%  endif %}</li>
+						</ul>
+					</div>
+				</div>
+			</div>
+		</div>
+	</div>		
 
 {% endblock %}
