--- a/src/LarpManager/Views/stock/objet/thumbnail.twig
+++ b/src/LarpManager/Views/stock/objet/thumbnail.twig
@@ -2,13 +2,15 @@
 
 <div class="col-xs-6 col-md-2">
 	<div class="thumbnail">
-        {% if objet.photo %}
-       		<img src="{{ app.request.basepath }}/uploads/img/{{ objet.photo.realName }}" alt="{{ objet.photo.name }}" height="200" width="200"/>
+	    {% if objet.photo %}
+       		<img src="{{ app.request.basepath }}/uploads/img/{{ objet.photo.realName }}" alt="{{ objet.photo.name }}" class="img-thumbnail" />
         {% endif %}
 		<div class="caption">
 	        <h3>{{ objet.nom }}&nbsp;-&nbsp;<small>{{ objet.code }}</small></h3>
 	        <p>{{ objet.description }}</p>
-	        <p><a href="{{ path('stock_objet_update', {index: objet.id}) }}" class="btn btn-primary" role="button">Modifier</a></p>
+	        <p>
+	        	<a href="{{ path('stock_objet_update', {index: objet.id}) }}" class="btn btn-primary" role="button">Modifier</a>
+	        	<a href="{{ path('stock_objet_detail', {index: objet.id}) }}" class="btn" role="button">Voir</a></p>
     	</div>
 	</div>
 </div>
