Ajout de la fonction d'export csv pour le stock

--- a/src/LarpManager/Views/menu.twig
+++ b/src/LarpManager/Views/menu.twig
@@ -27,6 +27,7 @@
 						<li><a href="{{ path('stock_rangement_index') }}">Rangements</a></li>
 						<li><a href="{{ path('stock_proprietaire_index') }}">Proprietaires</a></li>
 						<li><a href="{{ path('stock_objet_index') }}">Objets</a></li>
+						<li><a href="{{ path('stock_objet_export') }}">Exporter</a></li>
 					</ul>
 				</li>
 			{% endif %}
